# animatool-mcp

./: LICENSE  README.md  SMOKE_TEST.md  pyproject.toml
.github/workflows/: publish-pypi.yml  sync-resources.yml
examples/: payload.example.json
src/animatool_mcp/: cli.py  client.py  config.py  history.py  mcp_server.py
src/animatool_mcp/resources/: __init__.py
src/animatool_mcp/resources/knowledge/: anima_expert.md
src/animatool_mcp/resources/schemas/: tool_schema_universal.json
tools/: sync_from_comfyui_animatool.py
